Use separate build directory for object files
Improved Makefile to compile object files into poker/build/ instead
of mixing them with source files in poker/src/.

Benefits:
- Clean source directory (only .c files in poker/src/)
- Better organization (all build artifacts in poker/build/)
- Easier to clean (just remove build/ directory)
- Follows modern build practices

Changes:
- Added BUILD_DIR := build variable
- Updated OBJFILES to use build/ directory
- Modified pattern rule to compile to build/ directory
- Updated clean target to remove build/ directory
- Added build/ to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,12 @@ __pycache__
 config.vars
 monkeytype.sqlite3
 
-# privatebet generated files to ignore
+# Build directories
+poker/build/
+build/
+obj/
+
+# privatebet generated files to ignore (legacy)
 privatebet/bet
 privatebet/cashierd
 privatebet/cron.sh
