Move executables to poker/bin/ directory
Improved organization by moving compiled executables (bet, cashierd)
from poker/ root to poker/bin/ directory.

Benefits:
- Cleaner poker/ directory (only source, config, scripts)
- Better organization (executables in dedicated bin/ folder)
- Follows standard Unix/Linux conventions
- Easier to manage and clean

Changes:
- Added BIN_DIR := bin variable
- Updated Makefile to build executables into bin/
- Updated clean target to remove bin/ directory
- Updated scripts: cron.sh, runservices.sh
- Updated README.md: all ./bet references to ./bin/bet
- Updated documentation: all protocol docs updated
- Added bin/ to .gitignore

New structure:
  poker/
    bin/      - Executables (bet, cashierd)
    build/    - Object files (.o)
    src/      - Source files (.c)
    include/  - Header files (.h)
    config/   - Configuration files

--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,9 @@ monkeytype.sqlite3
 
 # Build directories
 poker/build/
+poker/bin/
 build/
+bin/
 obj/
 
 # privatebet generated files to ignore (legacy)
