Fix workflow build errors: macOS pip and Linux include paths
- Fix macOS pip install by adding --user flag for mako
- Fix inconsistent include paths in iguana777.h (../external/ -> ../../external/)
- Resolves compilation errors in GitHub Actions workflow

--- a/.github/workflows/bet-cd.yml
+++ b/.github/workflows/bet-cd.yml
@@ -149,7 +149,7 @@ jobs:
           brew install gnu-sed
           brew install pyenv
           brew install libwebsockets
-          pip3 install mako
+          pip3 install --user mako
 
     - name: Build crypto library
       run: make --directory libs/crypto
