Fix Linux build: Add nng include path to crypto Makefile
- Add -I ../../external/nng/include to CFLAGS in libs/crypto/Makefile
- Resolves compilation error for iguana_utils.c when including nng headers
- Fixes 'No such file or directory' error for nn.h in GitHub Actions

--- a/libs/crypto/Makefile
+++ b/libs/crypto/Makefile
@@ -1,7 +1,7 @@
 # Crypto library Makefile
 CC ?= gcc
 AR ?= ar
-CFLAGS = -w -O2 -fPIC -I ../../includes
+CFLAGS = -w -O2 -fPIC -I ../../includes -I ../../external/nng/include
 
 # All source files
 SRCFILES = curve25519.c curve25519-donna.c tweetnacl.c scrypt.c \
