Fix Linux build: Add pthread flag and fix dlg include path
- Add -pthread to CFLAGS to fix pthread_rwlock_t error
- Change dlg include from relative path to use Makefile include path
- Resolves compilation errors in GitHub Actions workflow

--- a/poker/Makefile
+++ b/poker/Makefile
@@ -36,7 +36,7 @@ else
 #WARNINGS := -Werror -Wunused-variable
 endif
 
-CFLAGS := -g -fPIC -std=c99 $(WARNINGS) \
+CFLAGS := -g -fPIC -std=c99 $(WARNINGS) -pthread \
           -I$(INCLUDE_DIR) \
           -I../libs/crypto \
           -I../includes/curl \
