Fix macOS build: Add libwebsockets include and library paths
- Add libwebsockets include path to Makefile CFLAGS
- Add libwebsockets library paths to macOS workflow LDFLAGS and CPPFLAGS
- Fixes 'libwebsockets.h file not found' error on macOS

--- a/poker/Makefile
+++ b/poker/Makefile
@@ -42,7 +42,8 @@ CFLAGS := -g -fPIC -std=c99 $(WARNINGS) -pthread \
           -I../includes/curl \
           -I$(EXTERNAL_DIR)/dlg/include \
           -I$(EXTERNAL_DIR)/iniparser/src \
-          -I$(EXTERNAL_DIR)/jsmn
+          -I$(EXTERNAL_DIR)/jsmn \
+          -I$(EXTERNAL_DIR)/libwebsockets/include
 
 .PHONY: all clean test
 
