--- a/.github/workflows/bet-cd.yml
+++ b/.github/workflows/bet-cd.yml
@@ -156,9 +156,9 @@ jobs:
       
     - name: Build poker application
       run: |
-          export LDFLAGS="-L/usr/local/opt/openssl/lib"
-          export CPPFLAGS="-I/usr/local/opt/openssl/include"
-          export PKG_CONFIG_PATH="/usr/local/opt/openssl/lib/pkgconfig"
+          export LDFLAGS="-L/usr/local/opt/openssl/lib -L/usr/local/opt/libwebsockets/lib"
+          export CPPFLAGS="-I/usr/local/opt/openssl/include -I/usr/local/opt/libwebsockets/include"
+          export PKG_CONFIG_PATH="/usr/local/opt/openssl/lib/pkgconfig:/usr/local/opt/libwebsockets/lib/pkgconfig"
           export OPENSSL_ROOT_DIR=/usr/local/opt/openssl
           make --directory poker
       
