--- a/.github/workflows/bet-cd.yml
+++ b/.github/workflows/bet-cd.yml
@@ -26,6 +26,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         ref: ${{ steps.extract_branch.outputs.branch }}
+        submodules: recursive
     - run: git fetch --prune --unshallow
     
     - name: apt update
@@ -79,6 +80,7 @@ jobs:
        uses: actions/checkout@v4
        with:
         ref: ${{ steps.extract_branch.outputs.branch }}
+        submodules: recursive
      - run: git fetch --prune --unshallow
        
      - name: Build crypto library
@@ -126,6 +128,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         ref: ${{ steps.extract_branch.outputs.branch }}
+        submodules: recursive
     - run: git fetch --prune --unshallow
     
     - name: Install deps (macOS)
@@ -205,6 +208,7 @@ jobs:
           uses: actions/checkout@v4
           with:
             ref: ${{ steps.extract_branch.outputs.branch }}
+            submodules: recursive
         - run: git fetch --prune --unshallow
 
         - name: Extract git tag
