Fix macOS build: Add iniparser library build step to ALL workflow jobs
- Add 'Build iniparser library' step before building poker application
- iniparser library must be built before linking
- Fixes error: no such file or directory: '../external/iniparser/libiniparser.a'
- Added to all build jobs: Linux x86_64, ARM64, and macOS

--- a/.github/workflows/bet-cd.yml
+++ b/.github/workflows/bet-cd.yml
@@ -43,7 +43,10 @@ jobs:
     
     - name: Build crypto library
       run: make --directory libs/crypto
-        
+    
+    - name: Build iniparser library
+      run: make --directory external/iniparser
+      
     - name: Build poker application
       run: make --directory poker
       
@@ -87,6 +90,9 @@ jobs:
        
      - name: Build crypto library
        run: make --directory libs/crypto
+     
+     - name: Build iniparser library
+       run: make --directory external/iniparser
        
      - name: Build poker application
        run: make --directory poker
@@ -158,6 +164,9 @@ jobs:
 
     - name: Build crypto library
       run: make --directory libs/crypto
+    
+    - name: Build iniparser library
+      run: make --directory external/iniparser
       
     - name: Build poker application
       run: |
