Remove OS_portable.h dependency and fix build issues
- Removed OS_portable.h from bet.h and cJSON.h
- Created bits256_utils.h with needed macros (SETBIT, GETBIT, etc.) and function declarations
- Renamed fmul to field_mul in curve25519.h/c to avoid conflict with C23 math.h
- Created math_compat.h with minimal math functions (fabs, pow, floor) to replace math.h
- Removed math.h includes from poker codebase
- Fixed OpenSSL header warning (missing quote in x509_vfy.h)
- Updated poker Makefile to include ../includes in CFLAGS
- All builds now compile without warnings or errors

--- a/poker/Makefile
+++ b/poker/Makefile
@@ -39,6 +39,7 @@ endif
 CFLAGS := -g -fPIC -std=c11 $(WARNINGS) -pthread \
           -I$(INCLUDE_DIR) \
           -I../libs/crypto \
+          -I../includes \
           -I../includes/curl \
           -I$(EXTERNAL_DIR)/dlg/include \
           -I$(EXTERNAL_DIR)/iniparser/src \
