refactor: add chips_rpc() abstraction and poker_vdxf layer
- Add chips_rpc() abstraction in commands.c for REST/CLI switching
- Update vdxf.c to use chips_rpc() for all 9 Verus RPC calls
- Create poker_vdxf.c/h with poker-specific API layer
- Add .rpccredentials config for RPC credentials (REST API)
- Remove unused VDXF functions from public API
- Add ERR_CHIPS_RPC error code

Architecture:
  Application -> poker_vdxf.c -> vdxf.c -> chips_rpc() -> REST/CLI

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,7 @@ dist/*
 bet_version.h
 compile_commands.json
 .vscode/
+
+# RPC credentials (contains secrets - never commit)
+poker/.rpccredentials
+.rpccredentials
