--- a/poker/config/verus_ids_keys.ini
+++ b/poker/config/verus_ids_keys.ini
@@ -6,6 +6,9 @@
 # Parent identity (root namespace)
 parent_id = sg777z.chips.vrsc@
 
+# Test identity for development/testing ID updates
+test_id = test.sg777z.chips@
+
 # Cashier identity (holds cashier information)
 cashier_id = cashier.sg777z.chips.vrsc@
 
