fix: use system libwebsockets headers to match installed version
- System has LWS v3.2.99, repo had v4.2.99 headers
- Struct layout differs between versions causing port/uid field misalignment
- Use /usr/local/include instead of external/libwebsockets/include
- Rename local lws_info to avoid shadowing global dcv_info

--- a/poker/Makefile
+++ b/poker/Makefile
@@ -44,7 +44,7 @@ CFLAGS := -g -fPIC -std=c11 $(WARNINGS) -pthread \
           -I$(EXTERNAL_DIR)/dlg/include \
           -I$(EXTERNAL_DIR)/iniparser/src \
           -I$(EXTERNAL_DIR)/jsmn \
-          -I$(EXTERNAL_DIR)/libwebsockets/include \
+          -I/usr/local/include \
           $(CPPFLAGS)
 
 .PHONY: all clean test
