fix: VDXF data parsing and null txid handling
- Update verus_dealer.ini to use d1 and t1 identities instead of sg777_d/sg777_t
- Fix verus_ids_keys.ini to use short key names (prefix added automatically)
- Fix get_cJSON_from_id_key to handle both array formats:
  * Simple format: ["hexdata"]
  * Nested format: [{"vdxfid": "hexdata"}]
- Fix update_with_retry to handle updateidentity response format
  (returns txid directly as string, not as {"tx": "txid"})
- Add null check for txid to prevent segfault

--- a/poker/config/verus_ids_keys.ini
+++ b/poker/config/verus_ids_keys.ini
@@ -21,40 +21,12 @@ dealers_short = dealers
 poker_short = poker
 
 [keys]
-# Base prefix for all keys
-# Format: chips.vrsc::<game_type>.<namespace>.
+# Base prefix for all keys (NOTE: include trailing dot)
 key_prefix = chips.vrsc::poker.sg777z.
 
-# Individual key names (these are appended to key_prefix)
+# Short key names (prefix will be added automatically by get_full_key)
 cashiers_key = cashiers
 dealers_key = dealers
 t_game_id_key = t_game_ids
 t_table_info_key = t_table_info
 t_player_info_key = t_player_info
-t_d_deck_key = t_d_deck
-t_b_deck_key = t_b_deck
-t_card_bv_key = card_bv
-t_game_info_key = t_game_info
-player_deck_key = player_deck
-
-# Player deck keys (p1-p9)
-t_d_p1_deck_key = t_d_p1_deck
-t_d_p2_deck_key = t_d_p2_deck
-t_d_p3_deck_key = t_d_p3_deck
-t_d_p4_deck_key = t_d_p4_deck
-t_d_p5_deck_key = t_d_p5_deck
-t_d_p6_deck_key = t_d_p6_deck
-t_d_p7_deck_key = t_d_p7_deck
-t_d_p8_deck_key = t_d_p8_deck
-t_d_p9_deck_key = t_d_p9_deck
-
-t_b_p1_deck_key = t_b_p1_deck
-t_b_p2_deck_key = t_b_p2_deck
-t_b_p3_deck_key = t_b_p3_deck
-t_b_p4_deck_key = t_b_p4_deck
-t_b_p5_deck_key = t_b_p5_deck
-t_b_p6_deck_key = t_b_p6_deck
-t_b_p7_deck_key = t_b_p7_deck
-t_b_p8_deck_key = t_b_p8_deck
-t_b_p9_deck_key = t_b_p9_deck
-
