--- a/poker/config/verus_dealer.ini
+++ b/poker/config/verus_dealer.ini
@@ -1,8 +1,10 @@
 [table]
-max_players			 = 2  	   #This is the maximun number of players that dealer will allow them to join the table. Atm, dealer waits for this number of players to join before starting hand.
-big_blind 			 = 0.001   #If this value is set the table stake size is calculated based on this which is 200BB, if this value is not set the default value is 0.01.		
-min_stake            = 20		   #The min table stake size is 20BB.
-max_stake            = 100		   #The max table stake size is 100BB.	
-table_id 	     = t1         	   #This is the table ID to which all the game info is to be committed. This table info is controlled by the players. 	
+max_players = 2
+big_blind = 0.001
+min_stake = 20
+max_stake = 100
+table_id = t1
+
 [verus]
-dealer_id = d1   #This is the ID for which the dealer owns the primaryaddress and to which it updates the info.
+dealer_id = d1
+cashier_id = cashier
