--- a/poker/config/verus_player.ini
+++ b/poker/config/verus_player.ini
@@ -1,5 +1,5 @@
 [verus]
-dealer_id      = "sg777_d"  #The player specifically looks if any  dealers with this name exists in the available dealer names and prefers that to join, else atm the player picks any one dealer that is available.
-table_id       =  "sg777_t" #If this set, then player looks to join the table with this specific name which is hosted by the dealer it is set in dealer_id and if no dealer_id is set then the player scan through all the dealers and tables available and joins if any table with this name exists, else the player just picks any one table and joins.
-wallet_addr    = "*" #This is the player registered address from which the player can spend funds from, the default value is *.
-player_id      = "p1" #This is the verus player ID, to which player updates the game info, so this ID must be signable and spendable from the node in which bet player node is running.
+dealer_id  = d1       # Dealer to join
+table_id   = t1       # Table to join
+wallet_addr = *       # Wallet address to spend from
+player_id  = p1       # Player's Verus ID (must be signable)
