--- a/poker/config/dealer_config.ini
+++ b/poker/config/dealer_config.ini
@@ -8,10 +8,10 @@ bet_ln_config        = N           # Set to N(no) if the dealer intends to recor
 min_cashiers		 = 2           # This is the minimum number of cashiers which the dealer needed in order to setup the table.
 
 [table]
-max_players			 = 2  		   #This is the maximun number of players that dealer will allow them to join the table. Atm, dealer waits for this number of players to join before starting hand.
-big_blind 			 = 0.001	   #If this value is set the table stake size is calculated based on this which is 200BB, if this value is not set the default value is 0.01.		
-min_stake            = 20		   #The min table stake size is 20BB.
-max_stake            = 100		   #The max table stake size is 100BB.	
+max_players			 = 2  		   #Maximum players (waits for this many before starting)
+big_blind 			 = 0.02	       #Big blind in CHIPS (small blind = big_blind / 2 = 0.01)
+min_stake            = 0.5		   #Min payin in CHIPS (for testing: 0.5 CHIPS = 25 BB)
+max_stake            = 2.0		   #Max payin in CHIPS (for testing: 2.0 CHIPS = 100 BB)	
 
 [private table]
 is_table_private     = N           #By default the dealer tables are public anyone can join the dealer table, if is_table_private set to "Y" then the dealer table is considered private and players has to provide the table_password in order to join the table.
