--- a/poker/config/verus_player_p1.ini
+++ b/poker/config/verus_player_p1.ini
@@ -3,4 +3,5 @@ dealer_id  = d1       # Dealer to join
 table_id   = t1       # Table to join
 wallet_addr = *       # Wallet address to spend from
 player_id  = p1       # Player's Verus ID (must be signable)
+ws_port    = 9001     # WebSocket port for GUI mode
 
