Add file-based logging with node-specific log files
- Add log.h/log.c: custom logging handler that wraps dlg
- Logs to both terminal AND file by default
- Log files named by node ID: p1.log, p2.log, d1.log, cashier.log
- Non-node commands log to debug.log
- Set BET_LOG_QUIET=1 to suppress terminal output
- Log files stored in /root/.bet/logs/
- Log format: [timestamp] [level] [file:func:line] message

Files:
- poker/include/log.h - logging API
- poker/src/log.c - logging implementation
- poker/src/bet.c - integrate logging init for each node type
- poker/Makefile - add log.c to build

--- a/poker/Makefile
+++ b/poker/Makefile
@@ -18,7 +18,7 @@ SRCFILES := $(SRC_DIR)/cards.c  $(SRC_DIR)/client.c  $(SRC_DIR)/commands.c  $(SR
             $(SRC_DIR)/help.c $(SRC_DIR)/err.c $(SRC_DIR)/vdxf.c $(SRC_DIR)/poker_vdxf.c \
             $(SRC_DIR)/player.c $(SRC_DIR)/blinder.c $(SRC_DIR)/dealer.c $(SRC_DIR)/print.c \
             $(SRC_DIR)/test.c $(SRC_DIR)/deck.c $(SRC_DIR)/game.c $(SRC_DIR)/dealer_registration.c \
-            $(SRC_DIR)/gui.c
+            $(SRC_DIR)/gui.c $(SRC_DIR)/log.c
 
 # Object files go in build directory
 OBJFILES := $(patsubst $(SRC_DIR)/%.c,$(BUILD_DIR)/%.o,$(SRCFILES))
